--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
           .get('https://api.sheetson.com/v2/sheets/Meta', {
             headers: {
               'Content-Type': 'application/json',
-              'Authorization': '17tcVnxqf4l-1enE5gBeJ0-1F5_ZjpDsI75cvHU_KfPKaLNTDtdYMJhEKZA',
+              'Authorization': 'Bearer 17tcVnxqf4l-1enE5gBeJ0-1F5_ZjpDsI75cvHU_KfPKaLNTDtdYMJhEKZA',
               'X-Sheetson-Spreadsheet-Id': '1DufxG21O0oFlhE9Meofdgj3ejZCdL3fnjyNKV318q0Q'
             }
           })
@@ -478,7 +478,7 @@
           .get('https://api.sheetson.com/v2/sheets/PortfolioItems', {
             headers: {
               'Content-Type': 'application/json',
-              'Authorization': '17tcVnxqf4l-1enE5gBeJ0-1F5_ZjpDsI75cvHU_KfPKaLNTDtdYMJhEKZA',
+              'Authorization': 'Bearer 17tcVnxqf4l-1enE5gBeJ0-1F5_ZjpDsI75cvHU_KfPKaLNTDtdYMJhEKZA',
               'X-Sheetson-Spreadsheet-Id': '1DufxG21O0oFlhE9Meofdgj3ejZCdL3fnjyNKV318q0Q'
             }
           })
