--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <div id="app">
 <!-- Header -->
-  <header x-scroll-to-header class="m-auto w-full px-3 sm:px-8 flex items-center justify-between py-0 sm:py-4 fixed z-1 bg-black/85 backdrop-blur-lg">
+  <header x-scroll-to-header class="m-auto w-full px-3 sm:px-8 flex items-center justify-between py-2 sm:py-4 fixed z-1 bg-black/85 backdrop-blur-lg">
     <div class="flex items-center justify-start gap-2 min-[375px]:gap-4 lg:flex-1">
       <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmyconchos.com" class="hover:opacity-75"
         onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;"
@@ -74,7 +74,7 @@
           <h1 class="text-2xl font-bold sm:text-3xl md:text-4xl leading-7 sm:leading-8 md:leading-10 tracking-tight">{{ meta.heading }}</h1>
         </div>
         <div class="max-w-sm">
-          <p class="my-2 text-base leading-[1.4] text-neutral-600">{{ meta.description }}</p>
+          <p class="my-2 text-base leading-[1.4] text-neutral-600">{{ meta.copy }}</p>
         </div>
         <div class="text-left lg:text-right">
           <a x-on:click.prevent="$scrollTo({ offsetHeader: true })" href="#contact" class="my-2 py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-black text-white hover:bg-neutral-800 focus:outline-hidden focus:bg-neutral-800 text-nowrap">Get in touch</a>
@@ -82,59 +82,21 @@
       </div>
       <!-- End Title -->
       <!-- Grid -->
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6" v-for="review in reviews">
         <!-- Card -->
         <div class="flex flex-col bg-white border border-gray-200 rounded-xl p-4 md:p-6">
           <div class="flex-auto">
             <blockquote class="text-base text-neutral-600 leading-[1.4]">
-              {{ meta.unoquote }}
+              {{ review.quote }}
             </blockquote>
           </div>
 
           <div class="mt-4 md:mt-6">
             <h3 class="text-lg font-semibold text-black">
-              {{ meta.unoname }}
+              {{ review.name }}
             </h3>
             <p class="text-sm text-neutral-600">
-              {{ meta.unoinfo }}
-            </p>
-          </div>
-        </div>
-        <!-- End Card -->
-
-        <!-- Card -->
-        <div class="flex flex-col bg-white border border-gray-200 rounded-xl p-4 md:p-6">
-          <div class="flex-auto">
-            <blockquote class="text-base text-neutral-600 leading-[1.4]">
-              {{ meta.dosquote }}
-            </blockquote>
-          </div>
-
-          <div class="mt-4 md:mt-6">
-            <h3 class="text-lg font-semibold text-black">
-              {{ meta.dosname }}
-            </h3>
-            <p class="text-sm text-neutral-600">
-              {{ meta.dosinfo }}
-            </p>
-          </div>
-        </div>
-        <!-- End Card -->
-
-        <!-- Card -->
-        <div class="flex flex-col bg-white border border-gray-200 rounded-xl p-4 md:p-6">
-          <div class="flex-auto">
-            <blockquote class="text-base text-neutral-600 leading-[1.4]">
-              {{ meta.tresquote }}
-            </blockquote>
-          </div>
-
-          <div class="mt-4 md:mt-6">
-            <h3 class="text-lg font-semibold text-black">
-              {{ meta.tresname }}
-            </h3>
-            <p class="text-sm text-neutral-600">
-             {{ meta.tresinfo }}
+              {{ review.position }}
             </p>
           </div>
         </div>
@@ -169,7 +131,7 @@
                     <div class="hs-carousel-slide px-1" v-for="item in items">
                       <!-- Card -->
                       <div class="flex flex-col bg-white border border-neutral-200 rounded-xl min-h-96">
-                        <img class="w-full h-auto rounded-t-lg aspect-3/2 object-cover" :src="item.image" alt="Product name">
+                        <img class="w-full h-auto rounded-t-lg aspect-3/2 object-cover" :src="item.image" :alt="item.title">
                         <div class="p-4 md:p-6">
                           <h3 class="text-lg font-semibold text-black">
                             {{ item.title }}
@@ -351,7 +313,7 @@
                 <h3 class="font-semibold text-lg text-black">Email</h3>
                 <p class="mt-1 text-sm text-neutral-600">If you wish to email us instead:</p>
                 <a class="mt-2 inline-flex items-center gap-x-2 text-sm font-medium text-black hover:text-neutral-600 focus:outline-hidden focus:text-neutral-600"
-                  href="" id="code">
+                  href="" id="enc">
                   <span class="hidden" aria-hidden="true">*</span>&#108;&#105;&#113;&#117;&#101;&#101;&#121;<!-- tqbfjotld -->@<!-- tqbfjotld -->&#109;&#121;&#99;&#111;&#110;&#99;&#104;&#111;&#115;&#46;&#99;&#111;&#109;
                 </a>
               </div>
@@ -416,6 +378,7 @@
       el: '#app',
       data: {
         meta: [], // Meta data from Google Sheet
+        reviews: [], // Reviews data from Google Sheet
         items: [] // Items data from Google Sheet
       },
       mounted () {
@@ -429,6 +392,17 @@
             }
           })
           .then(response => (this.meta = response.data.results[0]))
+
+        // Fetch the Meta data from Sheetson API
+        axios
+          .get('https://api.sheetson.com/v2/sheets/ReviewItems', {
+            headers: {
+              'Content-Type': 'application/json',
+              'Authorization': 'Bearer 17tcVnxqf4l-1enE5gBeJ0-1F5_ZjpDsI75cvHU_KfPKaLNTDtdYMJhEKZA',
+              'X-Sheetson-Spreadsheet-Id': '17ZJG3ty5w9VHw8BF7IP6udG3Iiy6U2vyB8TKvG6pujQ'
+            }
+          })
+          .then(response => (this.reviews = response.data.results))
 
         // Fetch the Items data from Sheetson API
         axios
@@ -446,11 +420,11 @@
   <script src="https://cdn.jsdelivr.net/npm/preline/dist/index.js"></script>
   <script defer src="https://unpkg.com/alpinejs-scroll-to@latest/dist/scroll-to.min.js"></script>
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
-  <script>
+<!--   <script>
     var encEmail = "bGlxdWVleUBteWNvbmNob3MuY29t";
-    const form = document.getElementById("code");
+    const form = document.getElementById("enc");
     form.setAttribute("href", "mailto:".concat(atob(encEmail)));
-  </script>
+  </script> -->
 
 </body>
 
