--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
       </div>
       <!-- End Title -->
       <!-- Grid -->
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6" v-for="review in reviews">
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
         <!-- Card -->
-        <div class="flex flex-col bg-white border border-gray-200 rounded-xl p-4 md:p-6">
+        <div class="flex flex-col bg-white border border-gray-200 rounded-xl p-4 md:p-6" v-for="review in reviews">
           <div class="flex-auto">
             <blockquote class="text-base text-neutral-600 leading-[1.4]">
               {{ review.quote }}
