--- a/index.html
+++ b/index.html
@@ -312,8 +312,7 @@
               <div class="grow">
                 <h3 class="font-semibold text-lg text-black">Email</h3>
                 <p class="mt-1 text-sm text-neutral-600">If you wish to email us instead:</p>
-                <a class="mt-2 inline-flex items-center gap-x-2 text-sm font-medium text-black hover:text-neutral-600 focus:outline-hidden focus:text-neutral-600"
-                  href="" id="enc">
+                <a class="mt-2 inline-flex items-center gap-x-2 text-sm font-medium text-black hover:text-neutral-600 focus:outline-hidden focus:text-neutral-600">
                   <span class="hidden" aria-hidden="true">*</span>&#108;&#105;&#113;&#117;&#101;&#101;&#121;<!-- tqbfjotld -->@<!-- tqbfjotld -->&#109;&#121;&#99;&#111;&#110;&#99;&#104;&#111;&#115;&#46;&#99;&#111;&#109;
                 </a>
               </div>
@@ -420,11 +419,6 @@
   <script src="https://cdn.jsdelivr.net/npm/preline/dist/index.js"></script>
   <script defer src="https://unpkg.com/alpinejs-scroll-to@latest/dist/scroll-to.min.js"></script>
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
-<!--   <script>
-    var encEmail = "bGlxdWVleUBteWNvbmNob3MuY29t";
-    const form = document.getElementById("enc");
-    form.setAttribute("href", "mailto:".concat(atob(encEmail)));
-  </script> -->
 
 </body>
 
