--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.min.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
@@ -71,10 +69,10 @@
       <!-- Title -->
       <div class="mb-6 lg:mb-10 flex justify-start lg:justify-between flex-col lg:flex-row px-4 md:px-6">
         <div class="w-full sm:max-w-sm">
-          <h1 class="text-2xl font-bold sm:text-3xl md:text-4xl leading-7 sm:leading-8 md:leading-10 tracking-tight">{{ meta.heading }}</h1>
+          <h1 class="text-2xl font-bold sm:text-3xl md:text-4xl leading-7 sm:leading-8 md:leading-10 tracking-tight">Delivering homemade happiness since 2004</h1>
         </div>
         <div class="max-w-sm">
-          <p class="my-2 text-base leading-[1.4] text-neutral-600">{{ meta.copy }}</p>
+          <p class="my-2 text-base leading-[1.4] text-neutral-600">Conchos brings you delicious pastries and desserts from Iriga City—baked by Liquee and inspired by her grandparents, Conching and Santos.</p>
         </div>
         <div class="text-left lg:text-right">
           <a x-on:click.prevent="$scrollTo({ offsetHeader: true })" href="#contact" class="my-2 py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-black text-white hover:bg-neutral-800 focus:outline-hidden focus:bg-neutral-800 text-nowrap">Get in touch</a>
@@ -84,19 +82,55 @@
       <!-- Grid -->
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
         <!-- Card -->
-        <div class="flex flex-col bg-white border border-gray-200 rounded-xl p-4 md:p-6" v-for="review in reviews">
+        <div class="flex flex-col bg-white border border-gray-200 rounded-xl p-4 md:p-6">
           <div class="flex-auto">
             <blockquote class="text-base text-neutral-600 leading-[1.4]">
-              {{ review.quote }}
+              Supporting local never tasted this good. Everything from Conchos' feels personal—flavors, stories, and service. You won’t regret ordering.
             </blockquote>
           </div>
 
           <div class="mt-4 md:mt-6">
             <h3 class="text-lg font-semibold text-black">
-              {{ review.name }}
+              Juan Dela Cruz
             </h3>
             <p class="text-sm text-neutral-600">
-              {{ review.position }}
+              Owner of Acme
+            </p>
+          </div>
+        </div>
+        <!-- End Card -->
+        <!-- Card -->
+        <div class="flex flex-col bg-white border border-gray-200 rounded-xl p-4 md:p-6">
+          <div class="flex-auto">
+            <blockquote class="text-base text-neutral-600 leading-[1.4]">
+              Conchos' has become our go-to for every celebration. Liquee’s pastries are consistently delicious and beautifully packed. Homemade happiness, indeed.
+            </blockquote>
+          </div>
+
+          <div class="mt-4 md:mt-6">
+            <h3 class="text-lg font-semibold text-black">
+              Juan Dela Cruz
+            </h3>
+            <p class="text-sm text-neutral-600">
+              Owner of Acme
+            </p>
+          </div>
+        </div>
+        <!-- End Card -->
+        <!-- Card -->
+        <div class="flex flex-col bg-white border border-gray-200 rounded-xl p-4 md:p-6">
+          <div class="flex-auto">
+            <blockquote class="text-base text-neutral-600 leading-[1.4]">
+              There's something comforting about Conchos' desserts—like a warm hug from your lola. My personal favorite? The peanut butter bars!
+            </blockquote>
+          </div>
+
+          <div class="mt-4 md:mt-6">
+            <h3 class="text-lg font-semibold text-black">
+              Juan Dela Cruz
+            </h3>
+            <p class="text-sm text-neutral-600">
+              Owner of Acme
             </p>
           </div>
         </div>
@@ -128,20 +162,80 @@
                   <!-- transition-transform duration-700 -->
                   <div
                     class="hs-carousel-body absolute top-0 bottom-0 start-0 flex flex-nowrap opacity-0 transition-transform duration-700">
-                    <div class="hs-carousel-slide px-1" v-for="item in items">
+                    <div class="hs-carousel-slide px-1">
                       <!-- Card -->
                       <div class="flex flex-col bg-white border border-neutral-200 rounded-xl min-h-96">
-                        <img class="w-full h-auto rounded-t-lg aspect-3/2 object-cover" :src="item.image">
+                        <img class="w-full h-auto rounded-t-lg aspect-3/2 object-cover" src="placeholder.png">
                         <div class="p-4 md:p-6">
                           <h3 class="text-lg font-semibold text-black">
-                            {{ item.title }}
+                            Product Name
                           </h3>
                           <p class="mt-2 text-sm text-neutral-600 truncate">
-                            {{ item.description }}
+                            Lorem ipsum dolor sit amet consectetur
                           </p>
                           <div class="mt-4">
                             <span class="py-1.5 px-3 bg-white text-black border border-neutral-200 text-sm rounded-lg">
-                              {{ item.label }}
+                              ₱999 per box
+                            </span>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- Card -->
+                    </div>
+                    <div class="hs-carousel-slide px-1">
+                      <!-- Card -->
+                      <div class="flex flex-col bg-white border border-neutral-200 rounded-xl min-h-96">
+                        <img class="w-full h-auto rounded-t-lg aspect-3/2 object-cover" src="placeholder.png">
+                        <div class="p-4 md:p-6">
+                          <h3 class="text-lg font-semibold text-black">
+                            Product Name
+                          </h3>
+                          <p class="mt-2 text-sm text-neutral-600 truncate">
+                            Lorem ipsum dolor sit amet consectetur
+                          </p>
+                          <div class="mt-4">
+                            <span class="py-1.5 px-3 bg-white text-black border border-neutral-200 text-sm rounded-lg">
+                              ₱999 per box
+                            </span>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- Card -->
+                    </div>
+                    <div class="hs-carousel-slide px-1">
+                      <!-- Card -->
+                      <div class="flex flex-col bg-white border border-neutral-200 rounded-xl min-h-96">
+                        <img class="w-full h-auto rounded-t-lg aspect-3/2 object-cover" src="placeholder.png">
+                        <div class="p-4 md:p-6">
+                          <h3 class="text-lg font-semibold text-black">
+                            Product Name
+                          </h3>
+                          <p class="mt-2 text-sm text-neutral-600 truncate">
+                            Lorem ipsum dolor sit amet consectetur
+                          </p>
+                          <div class="mt-4">
+                            <span class="py-1.5 px-3 bg-white text-black border border-neutral-200 text-sm rounded-lg">
+                              ₱999 per box
+                            </span>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- Card -->
+                    </div>
+                    <div class="hs-carousel-slide px-1">
+                      <!-- Card -->
+                      <div class="flex flex-col bg-white border border-neutral-200 rounded-xl min-h-96">
+                        <img class="w-full h-auto rounded-t-lg aspect-3/2 object-cover" src="placeholder.png">
+                        <div class="p-4 md:p-6">
+                          <h3 class="text-lg font-semibold text-black">
+                            Product Name
+                          </h3>
+                          <p class="mt-2 text-sm text-neutral-600 truncate">
+                            Lorem ipsum dolor sit amet consectetur
+                          </p>
+                          <div class="mt-4">
+                            <span class="py-1.5 px-3 bg-white text-black border border-neutral-200 text-sm rounded-lg">
+                              ₱999 per box
                             </span>
                           </div>
                         </div>
@@ -371,54 +465,10 @@
     </footer>
   <!-- End Footer -->
 </div>
-  <script defer src="https://cdn.jsdelivr.net/npm/preline/dist/index.js"></script>
-  <script defer>
-    var app = new Vue({
-      el: '#app',
-      data: {
-        meta: [], // Meta data from Google Sheet
-        reviews: [], // Reviews data from Google Sheet
-        items: [] // Items data from Google Sheet
-      },
-      mounted () {
-        // Fetch the Meta data from Sheetson API
-        axios
-          .get('https://api.sheetson.com/v2/sheets/Meta', {
-            headers: {
-              'Content-Type': 'application/json',
-              'Authorization': 'Bearer 17tcVnxqf4l-1enE5gBeJ0-1F5_ZjpDsI75cvHU_KfPKaLNTDtdYMJhEKZA',
-              'X-Sheetson-Spreadsheet-Id': '17ZJG3ty5w9VHw8BF7IP6udG3Iiy6U2vyB8TKvG6pujQ'
-            }
-          })
-          .then(response => (this.meta = response.data.results[0]))
 
-        // Fetch the Meta data from Sheetson API
-        axios
-          .get('https://api.sheetson.com/v2/sheets/ReviewItems', {
-            headers: {
-              'Content-Type': 'application/json',
-              'Authorization': 'Bearer 17tcVnxqf4l-1enE5gBeJ0-1F5_ZjpDsI75cvHU_KfPKaLNTDtdYMJhEKZA',
-              'X-Sheetson-Spreadsheet-Id': '17ZJG3ty5w9VHw8BF7IP6udG3Iiy6U2vyB8TKvG6pujQ'
-            }
-          })
-          .then(response => (this.reviews = response.data.results))
-
-        // Fetch the Items data from Sheetson API
-        axios
-          .get('https://api.sheetson.com/v2/sheets/CardItems', {
-            headers: {
-              'Content-Type': 'application/json',
-              'Authorization': 'Bearer 17tcVnxqf4l-1enE5gBeJ0-1F5_ZjpDsI75cvHU_KfPKaLNTDtdYMJhEKZA',
-              'X-Sheetson-Spreadsheet-Id': '17ZJG3ty5w9VHw8BF7IP6udG3Iiy6U2vyB8TKvG6pujQ'
-            }
-          })
-          .then(response => (this.items = response.data.results))
-      }
-    })
-  </script>
-
-  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
   <script defer src="https://unpkg.com/alpinejs-scroll-to@latest/dist/scroll-to.min.js"></script>
+  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/preline/dist/index.js"></script>
 
 </body>
 
