--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:title" content="Homemade Pastries & Desserts | Conchos – Iriga City">
   <meta property="og:description"
     content="Conchos offers muffins, cookies, brownies, and homemade pastries in Iriga City, Camarines Sur. Baked by Liquee, inspired by family tradition.">
-  <meta property="og:image" content="https://myconchos.com/assets/img/og-image.png">
+  <meta property="og:image" content="https://myconchos.com/og-image.png">
 
   <title>Homemade Pastries & Desserts | Conchos – Iriga City</title>
 
