--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <section class="relative overflow-hidden before:absolute before:top-0 before:bg-top before:bg-no-repeat before:bg-cover before:bg-[url('placeholder.png')] before:blur-3xl before:size-full before:-z-1 before:mask-b-from-white">
       <!-- Cover -->
       <div class="relative max-w-6xl px-4 sm:px-6 lg:px-8 mx-auto">
-        <div class="min-h-72 md:min-h-120 bg-[url('https://res.cloudinary.com/deqlftter/image/upload/v1747434542/placeholder_tzgxbt.png')] bg-top bg-cover bg-black bg-no-repeat relative rounded-b-xl"></div>
+        <div class="min-h-72 md:min-h-120 bg-[url('placeholder.png')] bg-top bg-cover bg-black bg-no-repeat relative rounded-b-xl"></div>
       </div>
       <!-- End Cover -->
     </section>
@@ -69,10 +69,10 @@
       <!-- Title -->
       <div class="mb-6 lg:mb-10 flex justify-start lg:justify-between flex-col lg:flex-row px-4 md:px-6">
         <div class="w-full sm:max-w-sm">
-          <h1 class="text-2xl font-bold sm:text-3xl md:text-4xl leading-7 sm:leading-8 md:leading-10 tracking-tight">Delivering homemade happiness since 2004</h1>
+          <h1 class="text-3xl font-bold md:text-4xl leading-8 md:leading-10 tracking-tight">Delivering homemade happiness since 2004</h1>
         </div>
         <div class="max-w-sm">
-          <p class="my-2 text-base leading-[1.4] text-neutral-600">Conchos brings you delicious pastries and desserts from Iriga City—baked by Liquee and inspired by her grandparents, Conching and Santos.</p>
+          <p class="my-2 text-sm leading-[1.4] text-neutral-600">Conchos' brings you delicious pastries and desserts from Iriga City—baked by Liquee and inspired by her grandparents, Conching and Santos.</p>
         </div>
         <div class="text-left lg:text-right">
           <a x-on:click.prevent="$scrollTo({ offsetHeader: true })" href="#contact" class="my-2 py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-black text-white hover:bg-neutral-800 focus:outline-hidden focus:bg-neutral-800 text-nowrap">Get in touch</a>
@@ -84,17 +84,17 @@
         <!-- Card -->
         <div class="flex flex-col bg-white border border-gray-200 rounded-xl p-4 md:p-6">
           <div class="flex-auto">
-            <blockquote class="text-base text-neutral-600 leading-[1.4]">
+            <blockquote class="text-sm text-neutral-600 leading-[1.4]">
               Supporting local never tasted this good. Everything from Conchos' feels personal—flavors, stories, and service. You won’t regret ordering.
             </blockquote>
           </div>
 
           <div class="mt-4 md:mt-6">
             <h3 class="text-lg font-semibold text-black">
-              Juan Dela Cruz
+              Walter Hartwell White Sr.
             </h3>
             <p class="text-sm text-neutral-600">
-              Owner of Acme
+              Chemistry Prof, JP Wynne High
             </p>
           </div>
         </div>
@@ -102,17 +102,17 @@
         <!-- Card -->
         <div class="flex flex-col bg-white border border-gray-200 rounded-xl p-4 md:p-6">
           <div class="flex-auto">
-            <blockquote class="text-base text-neutral-600 leading-[1.4]">
+            <blockquote class="text-sm text-neutral-600 leading-[1.4]">
               Conchos' has become our go-to for every celebration. Liquee’s pastries are consistently delicious and beautifully packed. Homemade happiness, indeed.
             </blockquote>
           </div>
 
           <div class="mt-4 md:mt-6">
             <h3 class="text-lg font-semibold text-black">
-              Juan Dela Cruz
+              Gustavo Fring
             </h3>
             <p class="text-sm text-neutral-600">
-              Owner of Acme
+              Owner, Los Pollos Hermanos
             </p>
           </div>
         </div>
@@ -120,17 +120,17 @@
         <!-- Card -->
         <div class="flex flex-col bg-white border border-gray-200 rounded-xl p-4 md:p-6">
           <div class="flex-auto">
-            <blockquote class="text-base text-neutral-600 leading-[1.4]">
+            <blockquote class="text-sm text-neutral-600 leading-[1.4]">
               There's something comforting about Conchos' desserts—like a warm hug from your lola. My personal favorite? The peanut butter bars!
             </blockquote>
           </div>
 
           <div class="mt-4 md:mt-6">
             <h3 class="text-lg font-semibold text-black">
-              Juan Dela Cruz
+              Saul Goodman
             </h3>
             <p class="text-sm text-neutral-600">
-              Owner of Acme
+              Criminal Defense Attorney
             </p>
           </div>
         </div>
