--- a/index.html
+++ b/index.html
@@ -281,15 +281,15 @@
                   <!-- Grid -->
                   <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
                     <div>
-                      <label for="hs-firstname-contacts-1" class="sr-only">First Name</label>
-                      <input type="text" name="hs-firstname-contacts-1" id="hs-firstname-contacts-1"
+                      <label for="firstname" class="sr-only">First Name</label>
+                      <input type="text" name="firstname" id="firstname"
                         class="py-2.5 sm:py-3 px-4 block w-full border border-neutral-200 rounded-lg sm:text-sm focus:border-neutral-500 focus:ring-neutral-500 focus:outline-hidden"
-                        placeholder="First Name">
+                        placeholder="First Name" required>
                     </div>
 
                     <div>
-                      <label for="hs-lastname-contacts-1" class="sr-only">Last Name</label>
-                      <input type="text" name="hs-lastname-contacts-1" id="hs-lastname-contacts-1"
+                      <label for="lastname" class="sr-only">Last Name</label>
+                      <input type="text" name="lastname" id="lastname"
                         class="py-2.5 sm:py-3 px-4 block w-full border border-neutral-200 rounded-lg sm:text-sm focus:border-neutral-500 focus:ring-neutral-500 focus:outline-hidden"
                         placeholder="Last Name">
                     </div>
@@ -297,30 +297,30 @@
                   <!-- End Grid -->
 
                   <div>
-                    <label for="hs-email-contacts-1" class="sr-only">Email</label>
-                    <input type="email" name="hs-email-contacts-1" id="hs-email-contacts-1" autocomplete="email"
+                    <label for="email" class="sr-only">Email</label>
+                    <input type="email" name="email" id="email" autocomplete="email"
                       class="py-2.5 sm:py-3 px-4 block w-full border border-neutral-200 rounded-lg sm:text-sm focus:border-neutral-500 focus:ring-neutral-500 focus:outline-hidden"
-                      placeholder="Email">
+                      placeholder="Email" required>
                   </div>
 
                   <div>
-                    <label for="hs-phone-number-1" class="sr-only">Phone</label>
-                    <input type="text" name="hs-phone-number-1" id="hs-phone-number-1"
+                    <label for="phone" class="sr-only">Phone</label>
+                    <input type="text" name="phone" id="phone"
                       class="py-2.5 sm:py-3 px-4 block w-full border border-neutral-200 rounded-lg sm:text-sm focus:border-neutral-500 focus:ring-neutral-500 focus:outline-hidden"
                       placeholder="Phone">
                   </div>
 
                   <div>
-                    <label for="hs-about-contacts-1" class="sr-only">Message</label>
-                    <textarea id="hs-about-contacts-1" name="hs-about-contacts-1" rows="4"
+                    <label for="message" class="sr-only">Message</label>
+                    <textarea id="message" name="message" rows="4"
                       class="py-2.5 sm:py-3 px-4 block w-full border border-neutral-200 rounded-lg sm:text-sm focus:border-neutral-500 focus:ring-neutral-500 focus:outline-hidden"
-                      placeholder="Message"></textarea>
+                      placeholder="Message" required></textarea>
                   </div>
                 </div>
                 <!-- End Grid -->
 
                 <div class="mt-4 grid">
-                  <button id="hs-run-on-click-run-confetti" type="submit"
+                  <button type="submit"
                     class="cursor-pointer w-full py-4 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-black text-white hover:bg-neutral-800 focus:bg-black focus:outline-hidden">Send
                     message</button>
                 </div>
