--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Conchos'">
-  <meta property="og:title" content="Homemade Pastries & Desserts | Conchos – Iriga City">
+  <meta property="og:title" content="Conchos' Homemade Pastries & Desserts — Iriga City">
   <meta property="og:description"
     content="Conchos offers muffins, cookies, brownies, and homemade pastries in Iriga City, Camarines Sur. Baked by Liquee, inspired by family tradition.">
   <meta property="og:image" content="https://myconchos.com/og-image.png">
 
-  <title>Homemade Pastries & Desserts | Conchos – Iriga City</title>
+  <title>Conchos' Homemade Pastries & Desserts — Iriga City</title>
 
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
